--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -8,8 +8,12 @@
 
 cycler==0.10.0 \
     --hash=sha256:1d8a5ae1ff6c5cf9b93e8811e581232ad8920aeec647c37316ceac982b08cb2d \
-    --hash=sha256:cd7b2d1018258d7247a71425e9f26463dfb444d411c39569972f4ce586b0c9d8 \
+    --hash=sha256:cd7b2d1018258d7247a71425e9f26463dfb444d411c39569972f4ce586b0c9d8
     # via matplotlib
+joblib==1.0.0 \
+    --hash=sha256:75ead23f13484a2a414874779d69ade40d4fa1abe62b222a23cd50d4bc822f6f \
+    --hash=sha256:7ad866067ac1fdec27d51c8678ea760601b70e32ff1881d4dc8e1171f2b64b24
+    # via scikit-learn
 kiwisolver==1.3.1 \
     --hash=sha256:0cd53f403202159b44528498de18f9285b04482bab2a6fc3f5dd8dbb9352e30d \
     --hash=sha256:1e1bc12fb773a7b2ffdeb8380609f4f8064777877b2225dec3da711b421fda31 \
@@ -42,7 +46,7 @@ kiwisolver==1.3.1 \
     --hash=sha256:cf8b574c7b9aa060c62116d4181f3a1a4e821b2ec5cbfe3775809474113748d4 \
     --hash=sha256:d3155d828dec1d43283bd24d3d3e0d9c7c350cdfcc0bd06c0ad1209c1bbc36d0 \
     --hash=sha256:f8d6f8db88049a699817fd9178782867bf22283e3813064302ac59f61d95be05 \
-    --hash=sha256:fd34fbbfbc40628200730bc1febe30631347103fc8d3d4fa012c21ab9c11eca9 \
+    --hash=sha256:fd34fbbfbc40628200730bc1febe30631347103fc8d3d4fa012c21ab9c11eca9
     # via matplotlib
 matplotlib==3.3.3 \
     --hash=sha256:09225edca87a79815822eb7d3be63a83ebd4d9d98d5aa3a15a94f4eee2435954 \
@@ -69,7 +73,7 @@ matplotlib==3.3.3 \
     --hash=sha256:c586ac1d64432f92857c3cf4478cfb0ece1ae18b740593f8a39f2f0b27c7fda5 \
     --hash=sha256:d082f77b4ed876ae94a9373f0db96bf8768a7cca6c58fc3038f94e30ffde1880 \
     --hash=sha256:e71cdd402047e657c1662073e9361106c6981e9621ab8c249388dfc3ec1de07b \
-    --hash=sha256:eb6b6700ea454bb88333d98601e74928e06f9669c1ea231b4c4c666c1d7701b4 \
+    --hash=sha256:eb6b6700ea454bb88333d98601e74928e06f9669c1ea231b4c4c666c1d7701b4
     # via seaborn
 numpy==1.19.3 \
     --hash=sha256:0ee77786eebbfa37f2141fd106b549d37c89207a0d01d8852fde1c82e9bfc0e7 \
@@ -105,8 +109,16 @@ numpy==1.19.3 \
     --hash=sha256:e983cbabe10a8989333684c98fdc5dd2f28b236216981e0c26ed359aaa676772 \
     --hash=sha256:ea6171d2d8d648dee717457d0f75db49ad8c2f13100680e284d7becf3dc311a6 \
     --hash=sha256:eefc13863bf01583a85e8c1121a901cc7cb8f059b960c4eba30901e2e6aba95f \
-    --hash=sha256:efd656893171bbf1331beca4ec9f2e74358fc732a2084f664fd149cc4b3441d2 \
-    # via matplotlib, pandas, scipy, seaborn, time-series-dataset, torch
+    --hash=sha256:efd656893171bbf1331beca4ec9f2e74358fc732a2084f664fd149cc4b3441d2
+    # via
+    #   matplotlib
+    #   pandas
+    #   scikit-learn
+    #   scipy
+    #   seaborn
+    #   time-series-dataset
+    #   time-series-generator
+    #   torch
 pandas==1.2.0 \
     --hash=sha256:0be6102dd99910513e75ed6536284743ead810349c51bdeadd2a5b6649f30abb \
     --hash=sha256:272675a98fa4954b9fc0933df775596fc942e50015d7e75d8f19548808a2bfdf \
@@ -124,8 +136,11 @@ pandas==1.2.0 \
     --hash=sha256:9e18631d996fe131de6cb31a8bdae18965cc8f39eb23fdfbbf42808ecc63dabf \
     --hash=sha256:cba93d4fd3b0a42858b2b599495aff793fb5d94587979f45a14177d1217ba446 \
     --hash=sha256:e03386615b970b8b41da6a68afe717626741bb2431cec993640685614c0680e4 \
-    --hash=sha256:f8b87d2f541cd9bc4ecfe85a561abac85c33fe4de4ce70cca36b2768af2611f5 \
-    # via flights_time_series_dataset (setup.py), seaborn
+    --hash=sha256:f8b87d2f541cd9bc4ecfe85a561abac85c33fe4de4ce70cca36b2768af2611f5
+    # via
+    #   flights_time_series_dataset (setup.py)
+    #   seaborn
+    #   time-series-dataset-generator
 pillow==8.1.0 \
     --hash=sha256:165c88bc9d8dba670110c689e3cc5c71dbe4bfb984ffa7cbebf1fac9554071d6 \
     --hash=sha256:22d070ca2e60c99929ef274cfced04294d2368193e935c5d6febfd8b601bf865 \
@@ -154,20 +169,49 @@ pillow==8.1.0 \
     --hash=sha256:cdbbe7dff4a677fb555a54f9bc0450f2a21a93c5ba2b44e09e54fcb72d2bd13d \
     --hash=sha256:d355502dce85ade85a2511b40b4c61a128902f246504f7de29bbeec1ae27933a \
     --hash=sha256:dc577f4cfdda354db3ae37a572428a90ffdbe4e51eda7849bf442fb803f09c9b \
-    --hash=sha256:dd9eef866c70d2cbbea1ae58134eaffda0d4bfea403025f4db6859724b18ab3d \
+    --hash=sha256:dd9eef866c70d2cbbea1ae58134eaffda0d4bfea403025f4db6859724b18ab3d
     # via matplotlib
 pyparsing==2.4.7 \
     --hash=sha256:c203ec8783bf771a155b207279b9bccb8dea02d8f0c9e5f8ead507bc3246ecc1 \
-    --hash=sha256:ef9d7589ef3c200abe66653d3f1ab1033c3c419ae9b9bdb1240a85b024efc88b \
+    --hash=sha256:ef9d7589ef3c200abe66653d3f1ab1033c3c419ae9b9bdb1240a85b024efc88b
     # via matplotlib
 python-dateutil==2.8.1 \
     --hash=sha256:73ebfe9dbf22e832286dafa60473e4cd239f8592f699aa5adaf10050e6e1823c \
-    --hash=sha256:75bb3f31ea686f1197762692a9ee6a7550b59fc6ca3a1f4b5d7e32fb98e2da2a \
-    # via matplotlib, pandas
+    --hash=sha256:75bb3f31ea686f1197762692a9ee6a7550b59fc6ca3a1f4b5d7e32fb98e2da2a
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2020.5 \
     --hash=sha256:16962c5fb8db4a8f63a26646d8886e9d769b6c511543557bc84e9569fb9a9cb4 \
-    --hash=sha256:180befebb1927b16f6b57101720075a984c019ac16b1b7575673bea42c6c3da5 \
+    --hash=sha256:180befebb1927b16f6b57101720075a984c019ac16b1b7575673bea42c6c3da5
     # via pandas
+scikit-learn==0.24.0 \
+    --hash=sha256:076369634ee72b5a5941440661e2f306ff4ac30903802dc52031c7e9199ac640 \
+    --hash=sha256:18f7131e62265bf2691ed1d0303c640313894ccfe4278427478c6b2f45094b53 \
+    --hash=sha256:26f66b3726b54dfb76ea51c5d9c2431ed17ebc066cb4527662b9e851a3e7ba61 \
+    --hash=sha256:2951f87d35e72f007701c6e028aa230f6df6212a3194677c0c950486066a454d \
+    --hash=sha256:2a5348585aa793bc8cc5a72f8e9067c9380834b0aadbd55f924843b071f13282 \
+    --hash=sha256:3eeff086f7329521d27249a082ea3c48c085cedb110db5f65968ab55c3ba2e09 \
+    --hash=sha256:4395e91b3548005f4a645018435b5a94f8cce232b5b70753020e606c6a750656 \
+    --hash=sha256:44e452ea8491225c5783d49577aad0f36202dfd52aec7f82c0fdfe5fbd5f7400 \
+    --hash=sha256:490436b44b3a1957cb625e871764b0aa330b34cc416aea4abc6c38ca63d0d682 \
+    --hash=sha256:5e6e3c042cea83f2e20a45e563b8eabc1f8f72446251fe23ebefdf111a173a33 \
+    --hash=sha256:66f27bf21202a850bcd7b6303916e4907f6e22ec59a14974ede4955aed5c7ed0 \
+    --hash=sha256:743b6edd98c98991be46c08e6b21df3861d5ae915f91d59f988384d93f7263e7 \
+    --hash=sha256:758619e49cd7c17282e6cc60d5cc73c02c072b47c9a10010bb3bb47e0d976e50 \
+    --hash=sha256:7f654befc5ad413690cc58f3f34a3e906caf825195ce0fda00a8e9565e1403e6 \
+    --hash=sha256:800aaf63f8838c00e85db2267dd226f89858594843fd03932a9eda95746d2c40 \
+    --hash=sha256:80ca024154b84b6ac4cfc86930ba13fdc348a209753bf2c16129db6f9eb8a80b \
+    --hash=sha256:890d7d588f65acb0c4f6c083347c9076916bda5e6bd8400f06244b1afc1009af \
+    --hash=sha256:905d8934d1e27a686698864a5863ff2c0e13a2ae1adb78a8a848aacc8a49927d \
+    --hash=sha256:afeb06dc69847927634e58579b9cdc72e1390b79497336b2324b1b173f33bd47 \
+    --hash=sha256:b0d13fd56d26cf3de0314a4fd48037108c638fe126d813f5c1222bb0f08b6a76 \
+    --hash=sha256:c08b27cb78ee8d2dc781a7affed09859441f5b624f9f92da59ac0791c8774dfc \
+    --hash=sha256:c912247e42114f389858ae05d63f4359d4e667ea72aaabee191aee9ad3f9774a \
+    --hash=sha256:d7fe05fcb44eadd6d6c874c768f085f5de1239db3a3b7be4d3d23d12e4120589 \
+    --hash=sha256:d819d625832fb2969911a243e009cfa135cb8ef1e150866e417d6e9d75290087 \
+    --hash=sha256:e534f5f3796db6781c87e9835dcd51b7854c8c5a379c9210b93605965c1941fd
+    # via sklearn
 scipy==1.6.0 \
     --hash=sha256:155225621df90fcd151e25d51c50217e412de717475999ebb76e17e310176981 \
     --hash=sha256:1bc5b446600c4ff7ab36bade47180673141322f0febaa555f1c433fe04f2a0e3 \
@@ -187,25 +231,46 @@ scipy==1.6.0 \
     --hash=sha256:cdbc47628184a0ebeb5c08f1892614e1bd4a51f6e0d609c6eed253823a960f5b \
     --hash=sha256:d902d3a5ad7f28874c0a82db95246d24ca07ad932741df668595fe00a4819870 \
     --hash=sha256:eb7928275f3560d47e5538e15e9f32b3d64cd30ea8f85f3e82987425476f53f6 \
-    --hash=sha256:f68d5761a2d2376e2b194c8e9192bbf7c51306ca176f1a0889990a52ef0d551f \
-    # via seaborn
+    --hash=sha256:f68d5761a2d2376e2b194c8e9192bbf7c51306ca176f1a0889990a52ef0d551f
+    # via
+    #   scikit-learn
+    #   seaborn
 seaborn==0.11.1 \
     --hash=sha256:44e78eaed937c5a87fc7a892c329a7cc091060b67ebd1d0d306b446a74ba01ad \
-    --hash=sha256:4e1cce9489449a1c6ff3c567f2113cdb41122f727e27a984950d004a88ef3c5c \
+    --hash=sha256:4e1cce9489449a1c6ff3c567f2113cdb41122f727e27a984950d004a88ef3c5c
     # via flights_time_series_dataset (setup.py)
 six==1.15.0 \
     --hash=sha256:30639c035cdb23534cd4aa2dd52c3bf48f06e5f4a941509c8bafd8ce11080259 \
-    --hash=sha256:8b74bedcbbbaca38ff6d7491d76f2b06b3592611af620f8426e82dddb04a5ced \
-    # via python-dateutil
+    --hash=sha256:8b74bedcbbbaca38ff6d7491d76f2b06b3592611af620f8426e82dddb04a5ced
+    # via
+    #   cycler
+    #   python-dateutil
+sklearn==0.0 \
+    --hash=sha256:e23001573aa194b834122d2b9562459bf5ae494a2d59ca6b8aa22c85a44c0e31
+    # via time-series-dataset-generator
+threadpoolctl==2.1.0 \
+    --hash=sha256:38b74ca20ff3bb42caca8b00055111d74159ee95c4370882bbff2b93d24da725 \
+    --hash=sha256:ddc57c96a38beb63db45d6c159b5ab07b6bced12c45a1f07b2b92f272aebfa6b
+    # via scikit-learn
+time-series-dataset-generator==0.0.1 \
+    --hash=sha256:03c118f76e99efcc7c80e822b5c4419f6d97b019f934053ac474a38510c65f69 \
+    --hash=sha256:a06c84c830f8be661081c5d8b88ba3adb8b82daa7f5feed2ebc24a7145ed17a4
+    # via flights_time_series_dataset (setup.py)
 time-series-dataset==0.0.5 \
     --hash=sha256:90e78f1e99de772bf54e7eded91e535d199b320929dd21c34270a74fc8b856c3 \
-    --hash=sha256:e23c5a26dd3f3abe4a5e07759c5be6497eac775aef6f256c89db7cd5e8f8dc57 \
-    # via flights_time_series_dataset (setup.py)
+    --hash=sha256:e23c5a26dd3f3abe4a5e07759c5be6497eac775aef6f256c89db7cd5e8f8dc57
+    # via
+    #   flights_time_series_dataset (setup.py)
+    #   time-series-dataset-generator
+time-series-generator==0.1.1 \
+    --hash=sha256:afbfe68171c083d6e3646c608986c9d2d39451bd88a0ec146e8f5ae9cc389c3c \
+    --hash=sha256:bb056f52fb22da780d6da964f53c7295ee24915e84279a1ccf1fe7f4701d6552
+    # via time-series-dataset-generator
 torch==1.7.1+cu110 \
-    --hash=sha256:2aa7c4219181e31fae146e5e42e395128214487fc7d016bc263fc60b354d22d6 \
+    --hash=sha256:2aa7c4219181e31fae146e5e42e395128214487fc7d016bc263fc60b354d22d6
     # via time-series-dataset
 typing-extensions==3.7.4.3 \
     --hash=sha256:7cb407020f00f7bfc3cb3e7881628838e69d8f3fcab2f64742a5e76b2f841918 \
     --hash=sha256:99d4073b617d30288f569d3f13d2bd7548c3a7e4c8de87db09a9d29bb3a4a60c \
-    --hash=sha256:dafc7639cde7f1b6e1acc0f457842a83e722ccca8eef5270af2d74792619a89f \
+    --hash=sha256:dafc7639cde7f1b6e1acc0f457842a83e722ccca8eef5270af2d74792619a89f
     # via torch
