:arrow_up: Update dependencies.

--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -138,7 +138,6 @@ pandas==1.2.0 \
     --hash=sha256:e03386615b970b8b41da6a68afe717626741bb2431cec993640685614c0680e4 \
     --hash=sha256:f8b87d2f541cd9bc4ecfe85a561abac85c33fe4de4ce70cca36b2768af2611f5
     # via
-    #   flights_time_series_dataset (setup.py)
     #   seaborn
     #   time-series-dataset-generator
 pillow==8.1.0 \
@@ -256,19 +255,17 @@ threadpoolctl==2.1.0 \
     --hash=sha256:38b74ca20ff3bb42caca8b00055111d74159ee95c4370882bbff2b93d24da725 \
     --hash=sha256:ddc57c96a38beb63db45d6c159b5ab07b6bced12c45a1f07b2b92f272aebfa6b
     # via scikit-learn
-time-series-dataset-generator==0.1.4 \
-    --hash=sha256:093de1ff63403abbd4bd6047f881f902eff1d0f7f1a6ec8a3123c16e5334e6aa \
-    --hash=sha256:48e4eb2204cfdc30b63050bbeafdb856c21183a9da3b63ef84ffd5c058524463
+time-series-dataset-generator==0.1.5 \
+    --hash=sha256:4dee731d2c06a42100a796bf108ae92f202956596da20fa3e03e7a91f11b5f5b \
+    --hash=sha256:9a69b3bc7b8aae8d835bf3d03b157641f22cba564f36f89d033f6dba4779a946
     # via flights_time_series_dataset (setup.py)
-time-series-dataset==0.0.6 \
-    --hash=sha256:27ba1e9779243ebeac2d69967c04fb211aee94cf47fdcc29b08d0ad0a97612e9 \
-    --hash=sha256:a0163c2cd561a3f25b5f54a275797571a1ba7a4bcb5ddd480afbb33829e10e7a
-    # via
-    #   flights_time_series_dataset (setup.py)
-    #   time-series-dataset-generator
-time-series-generator==0.2.3 \
-    --hash=sha256:0d34949b002d0ce657e2a4304d63af8415c6d65bbd9c537454bfcb4291a9503f \
-    --hash=sha256:6dea5a149360c880e29b4e545f50e431e33c25746a108f93b148d8bf251b4d96
+time-series-dataset==0.0.7 \
+    --hash=sha256:425cce37b90958ebee17146014c820778fdce2345685907a7d07460093a4b4e7 \
+    --hash=sha256:a9c8bdb5d25be8dd735445ceaefa040b1b0e29a018e8a641bd935744461f8f60
+    # via time-series-dataset-generator
+time-series-generator==0.2.4 \
+    --hash=sha256:17f808fe5e583c1d77823657e769683ff22c7ff63695e6da5abb13d1282bb7f5 \
+    --hash=sha256:3bed432b845ef3f64090898991fbac9b5d003a0bf38d36b73e2bc9d5c684400c
     # via time-series-dataset-generator
 torch==1.7.1+cu110 \
     --hash=sha256:2aa7c4219181e31fae146e5e42e395128214487fc7d016bc263fc60b354d22d6
